// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill> should not render a non-permalink 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`<Pill> should not render an avatar or link when called with inMessage = false and shouldShowPillAvatar = false 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <span
        tabindex="0"
      >
        <span
          class="mx_Pill mx_RoomPill"
        >
          <span
            class="mx_Pill_text"
          >
            Room 1
          </span>
        </span>
      </span>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for @room 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <span
        tabindex="0"
      >
        <span
          class="mx_Pill mx_AtRoomPill"
        >
          <span
            aria-hidden="true"
            class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
            data-color="1"
            data-testid="avatar-img"
            data-type="round"
            role="presentation"
            style="--cpd-avatar-size: 16px;"
          >
            R
          </span>
          <span
            class="mx_Pill_text"
          >
            @room
          </span>
        </span>
      </span>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for a known user not in the room 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_UserPill"
        href="https://matrix.to/#/@user2:example.com"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="5"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          U
        </span>
        <span
          class="mx_Pill_text"
        >
          User 2
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for a message in another room 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_EventPill"
        href="https://matrix.to/#/!room1:example.com/$123-456"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="1"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          R
        </span>
        <span
          class="mx_Pill_text"
        >
          Message in Room 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for a message in the same room 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_EventPill"
        href="https://matrix.to/#/!room1:example.com/$123-456"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="4"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          U
        </span>
        <span
          class="mx_Pill_text"
        >
          Message from User 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for a room alias 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_RoomPill"
        href="https://matrix.to/#/#room1:example.com"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="1"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          R
        </span>
        <span
          class="mx_Pill_text"
        >
          Room 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for a space 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_RoomPill"
        href="https://matrix.to/#/!space1:example.com"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="2"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          S
        </span>
        <span
          class="mx_Pill_text"
        >
          Space 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> should render the expected pill for an uknown user not in the room 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_UserPill"
        href="https://matrix.to/#/@user3:example.com"
      >
        <svg
          class="mx_Pill_UserIcon mx_BaseAvatar"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 12q-1.65 0-2.825-1.175T8 8t1.175-2.825T12 4t2.825 1.175T16 8t-1.175 2.825T12 12m-8 6v-.8q0-.85.438-1.562.437-.713 1.162-1.088a14.8 14.8 0 0 1 3.15-1.163A13.8 13.8 0 0 1 12 13q1.65 0 3.25.387 1.6.388 3.15 1.163.724.375 1.163 1.087Q20 16.35 20 17.2v.8q0 .824-.587 1.413A1.93 1.93 0 0 1 18 20H6q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 18"
          />
        </svg>
        <span
          class="mx_Pill_text"
        >
          @user3:example.com
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> when rendering a pill for a room should render the expected pill 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_RoomPill"
        href="https://matrix.to/#/!room1:example.com"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="1"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          R
        </span>
        <span
          class="mx_Pill_text"
        >
          Room 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;

exports[`<Pill> when rendering a pill for a user in the room should render as expected 1`] = `
<DocumentFragment>
  <div>
    <bdi>
      <a
        class="mx_Pill mx_UserPill"
        href="https://matrix.to/#/@user1:example.com"
      >
        <span
          aria-hidden="true"
          class="_avatar_1qbcf_8 mx_BaseAvatar _avatar-imageless_1qbcf_52"
          data-color="4"
          data-testid="avatar-img"
          data-type="round"
          role="presentation"
          style="--cpd-avatar-size: 16px;"
        >
          U
        </span>
        <span
          class="mx_Pill_text"
        >
          User 1
        </span>
      </a>
    </bdi>
  </div>
</DocumentFragment>
`;
